<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddPlaceDetails"
    android:background="@drawable/logo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Textplace"
        android:backgroundTint="@android:color/holo_blue_light"
        android:textCursorDrawable="@drawable/cursorcolor"
        android:inputType="textFilter|textMultiLine"
        android:digits="_-0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
         android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:maxLength="12"
        android:hint="@string/trip_description"
        android:autofillHints=" " />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editno"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:backgroundTint="@android:color/holo_blue_light"
        android:layout_below="@+id/Textplace"
        android:textCursorDrawable="@drawable/cursorcolor"
        android:layout_alignParentStart="true"
        android:layout_marginTop="52dp"
        android:inputType="number"
        android:maxLength="2"
        android:hint="@string/no_of_participants"
        android:autofillHints=" " />
    <EditText
        android:id="@+id/friend_name"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:layout_below="@+id/daye"
        android:hint="@string/participant_name"
        android:backgroundTint="@android:color/holo_blue_light"
        android:layout_marginTop="50dp"
        android:textCursorDrawable="@drawable/cursorcolor"
        android:inputType="textFilter|textMultiLine"
        android:maxLength="12"
        android:digits="_-0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:autofillHints=" " />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:layout_below="@+id/editno"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/friend_name"
        android:text="@string/add"
        android:textColor="#ffffff"
        android:background="@drawable/button_shadow"

        />

    <TextView
        android:id="@+id/daye"
        android:layout_width="180dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_below="@+id/editno"
        android:hint="@string/select_date"
        android:layout_marginTop="60dp"
        />


    <Button
        android:id="@+id/daypickbut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@id/editno"
        android:layout_marginStart="4dp"
        android:textColor="#fff"
        android:layout_toEndOf="@+id/daye"
        android:background="@drawable/button_shadow"
        android:text="@string/date" />

    <Button

        android:text="@string/submit"
        android:id="@+id/button_SUBMIT"
        android:layout_marginBottom="42dp"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shadow"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
